--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
       <section class="meal-search">
         <h2 class="title">Discover Meals with Your Ingredients</h2>
         <blockquote>
-          "Cooking is like love. It should be entered into with abandon or not at all."
-          <cite>- Harriet Van Horne</cite>
+          "I like pizza"
+          <cite>- Harshil Shah</cite>
         </blockquote>
         
         <div class="meal-search-box">
